feat: sparql
